# mtec-rtu-proxy

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
modbus_proxy/: __init__.py  __main__.py  cache.py  config.py  framing.py  healthcheck.py  proxy.py
mtec_rtu_proxy/: __init__.py  __main__.py  cache.py  config.py  framing.py  healthcheck.py  proxy.py
tests/: mock_dongle.py  test_cache.py  test_framing.py  test_integration.py
