[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "modbus-rtu-tcp-proxy"
version = "0.2.0"
description = "Single-master Modbus RTU-over-TCP proxy: RTU/MBAP dialect bridge, desync-safe resync, optional read-through cache"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "snordquist" }]
keywords = ["modbus", "rtu", "rtu-over-tcp", "modbus-tcp", "proxy", "gateway", "single-master", "solar", "home-assistant"]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/snordquist/modbus-rtu-tcp-proxy"

[project.scripts]
modbus-rtu-tcp-proxy = "modbus_proxy.__main__:main"

[tool.setuptools]
packages = ["modbus_proxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
